src/test/error/enum.lns
enum testEnum {
   val1,
   val2,
   val3 = 1.0 // error: multiple type
}

enum testEnum2 {
   val1 = 1.0,
   val2,
   val3 = 1, // error: multiple type
}

enum testEnum3 {
   val1 = "1",
   val2,  // error: illegal type
   val3 = 1, // error: multiple type
}

enum testEnum4 {
   val1,
   val2
}

let val = testEnum4.val1;
val = testEnum4.val2;
val = 1; // error: type mismatch

testEnum4 = 1; // error
testEnum4.val1 = 1; // error
testEnum4.val1 = testEnum4.val1; // error


{
   let valtest = 1;
   valtest = testEnum4.val1;
}

{
   let valtest = 1.0;
   valtest = testEnum2.val2;
}

{
   let valtest = "";
   valtest = testEnum3.val1;
}

{
   let valtest = testEnum3.val4; // error
}

{
   let valtest = testEnum4._from( 0 );
   valtest = testEnum4.val1;
   valtest = 1; // error
   if valtest == 1 { // error
   }
   if valtest == testEnum4._from(1) {
   }
   let! valtest2 = valtest {}
   then {
      if valtest2 == 1 {
      }
   };
}

{
   let val1:testEnum = 1;
   testEnum._from( "1" );
}
